--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -11,7 +11,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.8.7",
+    "@babel/plugin-transform-typescript": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/preset-react": "^7.8.3",
     "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "rollup": "^2.0.6",
